--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,9 +5,13 @@
           box-sizing: border-box;
 }
 
+body {
+  max-width: 1440px;
+  margin: 0 auto;
+}
 body header {
-  background: url("../../images/mae-mu-1APtYqzNajA-unsplash.png") center/cover no-repeat;
-  height: 100vh;
+  background: url("../../images/mae-mu-1APtYqzNajA-unsplash.png") center/cover;
+  height: 800px;
 }
 body header nav {
   display: -webkit-box;
@@ -31,13 +35,14 @@ body header nav ul {
   list-style: none;
   gap: 30px;
   padding: 30px;
+  margin: 20px;
 }
 body header nav ul li a {
   text-decoration: none;
   font-family: "Barlow", sans-serif;
   font-weight: 600;
   font-size: 18px;
-  color: white;
+  color: #ffffff;
 }
 body header nav ul .menu-contact a {
   color: black;
@@ -45,4 +50,29 @@ body header nav ul .menu-contact a {
   font-weight: 700;
   font-size: 15px;
   text-transform: uppercase;
+  background-color: #ffffff;
+  padding: 16px 32px 15px 30px;
+  border-radius: 40px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+body header nav ul .menu-contact a:hover {
+  background-color: #77cdf5;
+  color: #ffffff;
+}
+body header h1 {
+  font-family: "Fraunces", serif;
+  font-weight: 900;
+  font-size: 56px;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-align: center;
+  margin-top: 70px;
+}
+body header .arrow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: auto;
+  margin-top: 95px;
 }/*# sourceMappingURL=style.css.map */
