--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -5,10 +5,11 @@
 }
 
 body {
+  max-width: 1440px;
+  margin: 0 auto;
   header {
-    background: url("../../images/mae-mu-1APtYqzNajA-unsplash.png") center/cover
-      no-repeat;
-    height: 100vh;
+    background: url("../../images/mae-mu-1APtYqzNajA-unsplash.png") center/cover;
+    height: 800px;
     nav {
       display: flex;
       justify-content: space-between;
@@ -22,6 +23,7 @@ body {
         list-style: none;
         gap: 30px;
         padding: 30px;
+        margin: 20px;
         li {
           a {
             text-decoration: none;
@@ -34,15 +36,35 @@ body {
         .menu-contact a {
           color: $black;
           font-family: "Fraunces", serif;
-          //   font-weight: 700;
-          //   font-size: 15px;
-          //   text-transform: uppercase;
-          background-color: white;
-          padding: 20px;
+          font-weight: 700;
+          font-size: 15px;
+          text-transform: uppercase;
+          background-color: $white;
+          padding: 16px 32px 15px 30px;
+          border-radius: 40px;
+          transition: 0.3s;
+          &:hover {
+            background-color: #77cdf5;
+            color: $white;
+          }
         }
       }
     }
-    // h1 {
-    // }
+    h1 {
+      font-family: "Fraunces", serif;
+      font-weight: 900;
+      font-size: 56px;
+      text-transform: uppercase;
+      color: $white;
+      text-align: center;
+      margin-top: 70px;
+    }
+    .arrow {
+      display: flex;
+      margin: auto;
+      margin-top: 95px;
+    }
+  }
+  main {
   }
 }
