--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -15,7 +15,7 @@ body {
       justify-content: space-between;
       align-items: center;
       img {
-        height: 20px;
+        height: 33px;
         padding-left: 30px;
       }
       ul {
@@ -58,6 +58,7 @@ body {
       color: $white;
       text-align: center;
       margin-top: 70px;
+      letter-spacing: 8.75px;
     }
     .arrow {
       display: flex;
@@ -66,5 +67,130 @@ body {
     }
   }
   main {
+    .solution {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+
+      .image_eggs {
+        background: url(../../images/mae-mu-40NjbC-Q-cw-unsplash.png)
+          center/cover no-repeat;
+        height: 700px;
+      }
+
+      .image_glass {
+        background: url(../../images/mae-mu-GnWKTJlMYsQ-unsplash.png)
+          center/cover no-repeat;
+        height: 700px;
+      }
+
+      .text {
+        margin: auto;
+
+        h2 {
+          font-family: "Fraunces", serif;
+          font-weight: 900px;
+          font-size: 40px;
+          color: $blue;
+          letter-spacing: -0.285714px;
+          padding-left: 150px;
+          padding-right: 150px;
+        }
+
+        p {
+          font-family: "Barlow", sans-serif;
+          font-weight: 600px;
+          font-size: 18px;
+          color: $grey;
+          width: 445px;
+          margin-left: 150px;
+          margin-top: 32px;
+          margin-bottom: 50px;
+          line-height: 30px;
+        }
+
+        a {
+          text-decoration: none;
+          font-family: "Fraunces", serif;
+          font-weight: bold;
+          font-size: 15px;
+          line-height: 25px;
+          color: $blue;
+          text-transform: uppercase;
+          letter-spacing: 1px;
+          margin-left: 160px;
+          position: relative;
+
+          &.link_yellow {
+            &::after {
+              @include link_color($yellow);
+            }
+            &:hover::after {
+              opacity: 0.9;
+            }
+          }
+
+          &.link_pink {
+            &::after {
+              @include link_color($pink);
+            }
+            &:hover::after {
+              opacity: 0.9;
+            }
+          }
+        }
+      }
+    }
+    .design {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr;
+      text-align: center;
+      font-family: "Fraunces", serif;
+
+      h2 {
+        font-weight: 900px;
+        font-size: 28px;
+        margin-bottom: 20px;
+      }
+
+      p {
+        margin-left: 180.5px;
+        margin-right: 180.5px;
+        line-height: 27px;
+      }
+
+      .fruit_cherry {
+        background: url(../../images/mae-mu-vbAEHCrvXZ0-unsplash.png)
+          center/cover no-repeat;
+        height: 700px;
+        @include design;
+
+        h2 {
+          color: $bluegrey;
+        }
+
+        p {
+          color: $bluep;
+          margin-bottom: 50px;
+        }
+      }
+
+      .fruit_tangerine {
+        background: url(../../images/mae-mu-U1iYwZ8Dx7k-unsplash.png)
+          center/cover no-repeat;
+        height: 700px;
+        @include design;
+
+        h2 {
+          color: $blueT;
+        }
+
+        p {
+          color: $blueTp;
+          margin-bottom: 80px;
+        }
+      }
+    }
   }
 }
