--- a/src/scss/_partial.scss
+++ b/src/scss/_partial.scss
@@ -14,15 +14,15 @@ $greyS: rgba(91, 99, 109, 1);
 $fontF: "Fraunces", serif;
 
 @mixin link_color($color) {
-  content: "";
-  position: absolute;
-  width: 124px;
   height: 5px;
+  width: 128px;
   background-color: $color;
-  opacity: 0.25;
-  bottom: 2px;
-  left: -5px;
+  position: absolute;
   border-radius: 5px;
+  z-index: -1;
+  bottom: 1px;
+  left: -5px;
+  opacity: 0.25;
 }
 
 @mixin design {
