--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -27,7 +27,7 @@ body {
         li {
           a {
             text-decoration: none;
-            font-family: "Barlow", sans-serif;
+            font-family: $fontB;
             font-weight: 600;
             font-size: 18px;
             color: $white;
@@ -98,7 +98,7 @@ body {
         }
 
         p {
-          font-family: "Barlow", sans-serif;
+          font-family: $fontB;
           font-weight: 600;
           font-size: 18px;
           color: $grey;
@@ -212,7 +212,7 @@ body {
             margin-bottom: 58px;
           }
           .story {
-            font-family: "Barlow", sans-serif;
+            font-family: $fontB;
             font-weight: 600;
             font-size: 18px;
             line-height: 32px;
@@ -227,6 +227,71 @@ body {
             line-height: 22.19px;
             color: $blue;
             margin-bottom: 9px;
+          }
+          .title {
+            font-family: $fontB;
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 25px;
+            letter-spacing: -0.1px;
+            color: $greyT;
+            margin-bottom: 139px;
+          }
+        }
+      }
+    }
+    .banner {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+  }
+  footer {
+    text-align: center;
+    background-color: $green;
+    padding-bottom: 72px;
+    img {
+      margin-top: 72px;
+      height: 33px;
+    }
+    .footer_menu {
+      ul {
+        list-style: none;
+        margin-top: 40px;
+        display: flex;
+        justify-content: center;
+        gap: 57px;
+        li {
+          a {
+            text-decoration: none;
+            font-family: $fontB;
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 25px;
+            letter-spacing: -0.13px;
+            color: $greenF;
+            &:hover {
+              color: $white;
+            }
+          }
+        }
+      }
+    }
+    .menu_socialMedia {
+      ul {
+        display: flex;
+        justify-content: center;
+        gap: 28px;
+        margin-top: 88px;
+        list-style: none;
+        li {
+          a {
+            i {
+              color: $greenL;
+              height: 20px;
+            }
+            &:hover i {
+              color: $white;
+            }
           }
         }
       }
