--- a/src/css/style.css
+++ b/src/css/style.css
@@ -93,6 +93,11 @@ body header h1 {
   margin-top: 70px;
   letter-spacing: 8.75px;
 }
+@media screen and (max-width: 990px) {
+  body header h1 {
+    font-size: 45px;
+  }
+}
 body header .arrow {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -106,7 +111,7 @@ body main .solution {
   grid-template-rows: 1fr 1fr;
   grid-template-areas: "a b" "c d";
 }
-@media screen and (max-width: 870px) {
+@media screen and (max-width: 990px) {
   body main .solution {
     grid-template-columns: 1fr;
     grid-template-areas: "b" "a" "c" "d";
@@ -126,6 +131,12 @@ body main .solution .text {
   margin: auto;
   height: 700px;
 }
+@media screen and (max-width: 990px) {
+  body main .solution .text {
+    text-align: center;
+    width: 327px;
+  }
+}
 body main .solution .text.text_eggs {
   grid-area: a;
 }
@@ -138,9 +149,15 @@ body main .solution .text h2 {
   font-size: 40px;
   color: rgb(36, 48, 62);
   letter-spacing: -0.285714px;
-  padding-left: 150px;
-  padding-right: 150px;
+  padding-left: 138px;
+  padding-right: 138px;
   margin-top: 162.5px;
+}
+@media screen and (max-width: 990px) {
+  body main .solution .text h2 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 }
 body main .solution .text p {
   font-family: "Barlow", sans-serif;
@@ -148,10 +165,17 @@ body main .solution .text p {
   font-size: 18px;
   color: #808397;
   max-width: 445px;
-  margin-left: 150px;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 32px;
   margin-bottom: 50px;
   line-height: 30px;
+}
+@media screen and (max-width: 990px) {
+  body main .solution .text p {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 body main .solution .text a {
   text-decoration: none;
@@ -162,10 +186,16 @@ body main .solution .text a {
   color: rgb(36, 48, 62);
   text-transform: uppercase;
   letter-spacing: 1px;
-  margin-left: 160px;
+  margin-left: 135px;
   position: relative;
   z-index: 1;
   margin-bottom: 150px;
+}
+@media screen and (max-width: 990px) {
+  body main .solution .text a {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 body main .solution .text a:hover span {
   opacity: 1;
@@ -199,7 +229,7 @@ body main .design {
   text-align: center;
   font-family: "Fraunces", serif;
 }
-@media screen and (max-width: 870px) {
+@media screen and (max-width: 990px) {
   body main .design {
     grid-template-columns: 1fr;
   }
@@ -210,9 +240,10 @@ body main .design h2 {
   margin-bottom: 20px;
 }
 body main .design p {
-  margin-left: 180.5px;
-  margin-right: 180.5px;
+  max-width: 300px;
   line-height: 27px;
+  margin-left: auto;
+  margin-right: auto;
 }
 body main .design .fruit_cherry {
   background: url(../../images/mae-mu-vbAEHCrvXZ0-unsplash.png) center/cover no-repeat;
@@ -256,6 +287,11 @@ body main .design .fruit_tangerine p {
   color: rgb(25, 83, 108);
   margin-bottom: 80px;
 }
+@media screen and (max-width: 990px) {
+  body main .design .fruit_tangerine p {
+    margin-bottom: 50px;
+  }
+}
 body main .testimony {
   margin-top: 88.5px;
   margin-bottom: 88.5px;
@@ -281,7 +317,7 @@ body main .testimony ul {
           justify-content: center;
   gap: 30px;
 }
-@media screen and (max-width: 870px) {
+@media screen and (max-width: 990px) {
   body main .testimony ul {
     display: block;
   }
@@ -301,7 +337,7 @@ body main .testimony ul li .story {
   margin-bottom: 69px;
   max-width: 350px;
 }
-@media screen and (max-width: 870px) {
+@media screen and (max-width: 990px) {
   body main .testimony ul li .story {
     margin-left: auto;
     margin-right: auto;
@@ -341,7 +377,7 @@ body main .banner .icecream {
 body main .banner .sugar {
   background: url(../../images/Bitmap\(3\).png) center/cover;
 }
-@media screen and (max-width: 870px) {
+@media screen and (max-width: 920px) {
   body main .banner {
     grid-template-columns: 1fr 1fr;
   }
