--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,6 +13,45 @@ body header {
   background: url("../../images/mae-mu-1APtYqzNajA-unsplash.png") center/cover;
   height: 800px;
 }
+body header .menu-burger-nav {
+  background-color: #ffffff;
+  width: 329px;
+  position: absolute;
+  top: 100px;
+  right: 40px;
+  display: none;
+}
+body header .menu-burger-nav ul {
+  list-style: none;
+}
+body header .menu-burger-nav ul li {
+  padding: 5px;
+  text-align: center;
+  padding-top: 39px;
+}
+body header .menu-burger-nav ul li a {
+  text-decoration: none;
+  color: rgb(91, 99, 109);
+  font-family: "Barlow", sans-serif;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+}
+body header .menu-burger-nav ul .menu-contact-burger a {
+  color: black;
+  background-color: rgb(250, 212, 0);
+  padding: 16px 32px 15px 30px;
+  border-radius: 28px;
+  font-family: "Fraunces", serif;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 25px;
+  text-transform: uppercase;
+  margin-bottom: 54px;
+}
+body header .active {
+  display: block;
+}
 body header nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -24,14 +63,14 @@ body header nav {
       -ms-flex-align: center;
           align-items: center;
 }
-body header nav .menu_burger i {
+body header nav .menu-burger i {
   font-size: 24px;
   color: #ffffff;
   display: none;
   margin-right: 32px;
 }
 @media screen and (max-width: 870px) {
-  body header nav .menu_burger i {
+  body header nav .menu-burger i {
     display: inline-block;
     margin-right: 32px;
     margin-top: 32px;
