--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -12,12 +12,53 @@ body {
     background: url("../../images/mae-mu-1APtYqzNajA-unsplash.png") center/cover;
     height: 800px;
 
+    .menu-burger-nav {
+      background-color: $white;
+      width: 329px;
+      position: absolute;
+      top: 100px;
+      right: 40px;
+      display: none;
+
+      ul {
+        list-style: none;
+        li {
+          padding: 5px;
+          text-align: center;
+          padding-top: 39px;
+          a {
+            text-decoration: none;
+            color: $greyS;
+            font-family: $fontB;
+            display: inline-block;
+            margin-left: auto;
+            margin-right: auto;
+          }
+        }
+        .menu-contact-burger a {
+          color: $black;
+          background-color: $yellow;
+          padding: 16px 32px 15px 30px;
+          border-radius: 28px;
+          font-family: $fontF;
+          font-weight: 700;
+          font-size: 15px;
+          line-height: 25px;
+          text-transform: uppercase;
+          margin-bottom: 54px;
+        }
+      }
+    }
+    .active {
+      display: block;
+    }
+
     nav {
       display: flex;
       justify-content: space-between;
       align-items: center;
 
-      .menu_burger {
+      .menu-burger {
         i {
           font-size: 24px;
           color: $white;
