--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,3 +1,38 @@
+@keyframes animation_testimony {
+  0% {
+    filter: brightness(100%);
+  }
+
+  25% {
+    filter: brightness(120%);
+  }
+
+  50% {
+    filter: brightness(140%);
+  }
+
+  75% {
+    filter: brightness(130%);
+  }
+
+  100% {
+    filter: brightness(120%);
+  }
+}
+
+@keyframes color_testimony {
+  to {
+    background: linear-gradient(143deg, rgb(254, 117, 101), rgb(247, 211, 4));
+    box-shadow: -1px 1px 21px 3px rgb(254, 117, 101);
+  }
+
+  from {
+    background: linear-gradient(139deg, rgb(247, 212, 0), rgb(130, 213, 197));
+
+    box-shadow: -1px 1px 21px 3px rgba(247, 212, 0, 0.59);
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -338,8 +373,23 @@ body {
 
         li {
           text-align: center;
+          &:hover {
+            background: linear-gradient(
+              143deg,
+              rgb(254, 117, 101),
+              rgb(247, 211, 4)
+            );
+            box-shadow: -1px 1px 21px 3px rgba(247, 211, 4, 0.59);
+            border-radius: 5px;
+            padding-top: 10px;
+            animation: color_testimony 2s linear infinite;
+          }
           img {
             margin-bottom: 58px;
+
+            &:hover {
+              animation: animation_testimony 2s linear infinite;
+            }
           }
           .story {
             font-family: $fontB;
