--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -50,10 +50,20 @@ body {
     .menu-burger-nav {
       background-color: $white;
       width: 329px;
+      height: 450px;
       position: absolute;
       top: 100px;
       right: 40px;
       display: none;
+      clip-path: polygon(
+        0% 0%,
+        100% 0,
+        100% 75%,
+        64% 74%,
+        63% 84%,
+        50% 75%,
+        0% 75%
+      );
 
       ul {
         list-style: none;
