--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -50,7 +50,7 @@ body {
     .menu-burger-nav {
       background-color: $white;
       width: 329px;
-      padding-top: 90px;
+      padding-top: 55px;
       position: absolute;
       top: 100px;
       right: 40px;
@@ -68,12 +68,13 @@ body {
       ul {
         list-style: none;
         li {
-          padding: 5px;
           text-align: center;
-          padding-top: 39px;
+          padding-top: 32px;
           a {
             text-decoration: none;
-            color: $greyS;
+            color: $greyT;
+            font-size: 20px;
+            font-weight: 600;
             font-family: $fontB;
             display: inline-block;
             margin-left: auto;
@@ -90,7 +91,7 @@ body {
           font-size: 15px;
           line-height: 25px;
           text-transform: uppercase;
-          margin-bottom: 54px;
+          margin-bottom: 40px;
         }
       }
     }
